@@ -1,6 +1,10 @@
 # This file was generated by Rcpp::compileAttributes
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+rzernike <- function(rho, n, m) {
+    .Call('zernike_rzernike', PACKAGE = 'zernike', rho, n, m)
+}
+
 zpmC <- function(rho, theta, maxorder) {
     .Call('zernike_zpmC', PACKAGE = 'zernike', rho, theta, maxorder)
 }
